# poetic-heroku-with-flask

./: LICENSE  Procfile  pyproject.toml
app/: __init__.py  views.py
app/static/: index.css
app/templates/: base.html  index.html
