[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["d3cryptofc <makerscriiptbr@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
gunicorn = "^20.1.0"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
